<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AndroidTim4</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="refresh_messages_checkbox">refresh_messages_checkbox</string>
    <string name="sort_messages_list">sort_messages_list</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="displayname">Display name:</string>
    <string name="firstname">First name:</string>
    <string name="lastname">Last name:</string>
    <string name="email">Email</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="cc">CC:</string>
    <string name="bcc">BCC:</string>
    <string name="datetime">Date time:</string>
    <string name="subject">Subject:</string>
    <string name="content">Content:</string>
    <string name="newItem">New</string>
    <string name="save">Save</string>
    <string name="addToFolder">Add to folder..</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="create">Create</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="reply">Reply</string>
    <string name="reply_all">Reply to all</string>
    <string name="forward">Forward</string>
    <string name="save_email">Save</string>
    <string name="send_email">Send</string>
    <string name="cancel_email">Cancel</string>
    <string name="back_email">Back</string>
    <string name="autosync_problem">Automatic Sync problem</string>
    <string name="no_internet">Bad news, no internet connection</string>
    <string name="autosync_warning">Automatic Sync warning</string>
    <string name="connect_to_wifi">Please connect to wifi to sync data</string>
    <string name="autosync">Automatic Sync</string>
    <string name="good_news_sync">Good news, everything is sync now.</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="format">Format</string>
    <string name="compose_hint">Fill this out</string>
    <string name="addAccount">Fill out this fields to create your account!</string>


</resources>
