<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context=".CreateEmailActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_layout"
        android:layout_width="782dp"
        android:layout_height="93dp"
        android:layout_marginEnd="395dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_create_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/create_email_toolbar_menu" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/create_email_to"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="578dp"
        android:text="@string/to"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_create_email_to"
        android:layout_width="277dp"
        android:layout_height="52dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="577dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create_email_cc"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="186dp"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="505dp"
        android:text="@string/cc"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_create_email_cc"
        android:layout_width="277dp"
        android:layout_height="40dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="186dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="505dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create_email_subject"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="431dp"
        android:text="@string/subject"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_create_email_subject"
        android:layout_width="277dp"
        android:layout_height="40dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="261dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="430dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create_email_bcc"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="327dp"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="364dp"
        android:text="@string/bcc"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_create_email_bcc"
        android:layout_width="277dp"
        android:layout_height="40dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="327dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="364dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create_email_content"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="407dp"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="284dp"
        android:text="@string/content"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_create_email_content"
        android:layout_width="354dp"
        android:layout_height="132dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="115dp"
        android:layout_weight="1"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="2000"
        android:maxLines="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_email_content"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>