<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4DD98"
    android:fitsSystemWindows="true"
    tools:context=".ContactActivity">

    <TextView
        android:id="@+id/email_contact"
        android:layout_width="166dp"
        android:layout_height="36dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="328dp"
        android:background="@color/white"
        android:backgroundTint="#FBFBFB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/lastName_contact"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lastName_contact"
        android:layout_width="112dp"
        android:layout_height="44dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="17dp"
        android:background="@color/white"
        android:backgroundTint="#FBFBFB"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/lastName"
        app:layout_constraintTop_toBottomOf="@+id/firstname_contact"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="395dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_contact"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#E4DD98"
            app:headerLayout="@layout/header"
            app:itemIconTint="@color/dark_gray" />
        <!--            app:menu="" -->

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/displayName"
        android:layout_width="205dp"
        android:layout_height="36dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="37dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/firstname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstname"
        android:layout_width="131dp"
        android:layout_height="36dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="53dp"
        android:text="@string/firstname"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayName" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="128dp"
        android:layout_height="31dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="30dp"
        android:text="@string/lastname"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toStartOf="@+id/lastName_contact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname" />

    <TextView
        android:id="@+id/email"
        android:layout_width="123dp"
        android:layout_height="36dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="339dp"
        android:text="@string/email"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/firstname_contact"
        android:layout_width="107dp"
        android:layout_height="40dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="19dp"
        android:background="@color/white"
        android:backgroundTint="#FBFBFB"
        app:layout_constraintBottom_toTopOf="@+id/lastName_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/firstname"
        app:layout_constraintTop_toBottomOf="@+id/displayName" />


</androidx.constraintlayout.widget.ConstraintLayout>